fixup! doc: Added docs for findme
